<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--主界面-->
    <string name="app_name">掌上空气</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="back">返回</string>
    <string name="add_city">添加城市</string>

    <!-- 城市排名-->
    <string name="city_sort">城市空气质量排行榜</string>
    <string name="city">城市</string>
    <string name="AQI">空气质量指数</string>
    <string name="level">级别</string>

    <!--通用设置-->
    <string name="settings">通用设置</string>
    <string name="data_fresh">数据更新</string>
    <string name="show_in_bar">通知栏显示</string>
    <string name="quick_desk_menu">桌面图标</string>
    <string name="search_update">检查更新</string>
    <string name="advice_submit">意见反馈</string>
    <string name="using_help">使用帮助</string>

    <!--提醒设置-->
    <string name="mention_settings">提醒设置</string>
    <string name="start_mention">开启提醒</string>
    <string name="mention_time">提醒时间</string>
    <string name="major_pollution">主要污染物</string>
    <string name="bad_weather">恶劣天气</string>
    <string name="carry_mask">携带口罩</string>
    <string name="sport_advice">运动建议</string>
    <string name="sound">声音</string>
    <string name="shock">震动</string>
</resources>